--- a/flights/pom.xml
+++ b/flights/pom.xml
@@ -15,7 +15,9 @@
 	<description>Flights Menagement</description>
 	<properties>
 		<java.version>17</java.version>
+<!--		<property name="hibernate.dialect">org.hibernate.dialect.MySQLDialect</property>-->
 	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -41,10 +43,6 @@
 			<artifactId>modelmapper</artifactId>
 			<version>3.0.0</version>
 		</dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-        </dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
