--- a/flights/src/main/resources/application.properties
+++ b/flights/src/main/resources/application.properties
@@ -3,4 +3,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/flight?createDatabaseIfNotExis
 spring.datasource.username=root
 spring.datasource.password=zaq12345
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
