--- a/flights/pom.xml
+++ b/flights/pom.xml
@@ -15,7 +15,6 @@
 	<description>Flights Menagement</description>
 	<properties>
 		<java.version>17</java.version>
-<!--		<property name="hibernate.dialect">org.hibernate.dialect.MySQLDialect</property>-->
 	</properties>
 
 	<dependencies>
@@ -38,6 +37,10 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-validation</artifactId>-->
+<!--		</dependency>-->
 		<dependency>
 			<groupId>org.modelmapper</groupId>
 			<artifactId>modelmapper</artifactId>
