--- a/flights/pom.xml
+++ b/flights/pom.xml
@@ -58,7 +58,12 @@
 			<artifactId>guava</artifactId>
 			<version>31.1-jre</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>6.0.1</version>
+        </dependency>
+    </dependencies>
 	<build>
 		<plugins>
 			<plugin>
